<resources>
    <string name="app_name">Event Registration</string>
    <string name="action_settings">Settings</string>
    <string name="participantspinner_label">Participant</string>
    <string name="eventspinner_label">Event</string>
    <string name="registration_button">Register</string>
    <string name="newparticipant_hint">Who?</string>
    <string name="newparticipant_button">Add Participant</string>
    <string name="newevent_hint">Event name?</string>
    <string name="newevent_button">Add Event</string>
    <string name="newevent_date_label">Date</string>
    <string name="newevent_date_first">01-01-2016</string>
    <string name="newevent_start_time_label">Start Time</string>
    <string name="newevent_start_time_first">10:00</string>
    <string name="newevent_end_time_label">End Time</string>
    <string name="newevent_end_time_first">12:00</string>
</resources>
